Refactor - moved files to hw3 folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 .vscode/settings.json
-2/.vscode/settings.json
-2/.vscode/tasks.json
+hw3/2/.vscode/settings.json
+hw3/2/.vscode/tasks.json
 .vscode/tasks.json
 *.exe
-1/a.exe
-4/build
-4/a.exe
+hw3/1/a.exe
+hw3/4/build
+hw3/4/a.exe
